# discordhttp.rs

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
discord/: Cargo.toml
discord/src/: client.rs  lib.rs  types.rs
discord/src/compression/: mod.rs  zlib.rs
old_src/: client.rs  types.rs
spoofer/: Cargo.toml
spoofer/src/: client.rs  lib.rs  types.rs  utils.rs
src/: client.rs  lib.rs  types.rs  utils.rs  ws_client.rs
