[package]
name = "discordhttp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"]}
serde_json = "*"
reqwest = {version = "0.11.1", features= ["stream", "__rustls", "rustls-tls-webpki-roots", "rustls-tls-native-roots", "json", "http3", "cookies"]} 
url = "2.5.2"
base64 = "0.22.1"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
randua = "0.1.6"
rand = "0.8.5"
regex = "1.11.1"
rustls = { version = "0.23.15", features = ["std", "ring" ] }
rustls-native-certs = "0.8.0"
ring = "0.17.8"
webpki = "0.22.4"
getrandom = "0.2.15"

[profile.dev]
incremental = true
