[package]
name = "spoofer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
url = "2.5.2"
base64 = "0.22.1"
randua = "0.1.6"
regex = "1.11.1"
rquest = { version = "=5.1.0", features = ["cookies", "json", "websocket"] }
futures = "0.3.31"
flate2 = { version = "1.0.34", features = ["zlib"] }
rquest-util = "2.2.1"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
